last fixes, solved horizontal scroll issue

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -51,14 +51,18 @@ footer .container{
     text-transform: uppercase;
     text-align: center;
     color: #fbfbfb;
-    transition: color 250ms cubic-bezier(0.19, 1, 0.22, 1);
-    transition: background-color 250ms cubic-bezier(0.19, 1, 0.22, 1);
+    transition: color 250ms ease-in;
+    transition: background-color 250ms ease-in;
 }
 
 .footer-link:hover,
 .footer-link:focus {
   color: #1b414b;
   background: #fbfbfb;
+}
+
+.footer-link:active {
+  transform: scale(0.95);
 }
 
 .footer-social {
@@ -71,12 +75,13 @@ footer .container{
 
 .footer-social .footer-icon {
   fill: #fbfbfb;
-  transition: fill 250ms cubic-bezier(0.19, 1, 0.22, 1);
+  transition: fill 250ms ease-in;
 }
 
 .footer-social-link:hover .footer-icon,
 .footer-social-link:focus .footer-icon {
   fill: rgba(251, 251, 251, 0.8);
+  transform: scale(1.1);
 }
 
 
