--- a/src/css/rentyacht.css
+++ b/src/css/rentyacht.css
@@ -91,14 +91,18 @@ textarea {
     display: block;
     border: none;
     margin-top: 22px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms ease-in,
+        color 250ms ease-in;
 }
 
 .rent-button:hover,
 .rent-button:focus {
     background-color: #fbfbfb;
     color: #1b414b;
+}
+
+.rent-button:active {
+    transform: scale(0.95);
 }
 
 /*media*/
